# homework

./: .gitmodules  replit.nix
task_32.5.1/: interstellar.json
task_32.5.2/: test_database.json
task_32.5.2/include/: film.h
task_32.5.2/src/: database.cpp  main.cpp
task_32.5.3/: CMakeLists.txt  gen_comp_msg_code.sh
task_32.5.3/generated_code/src/: company.pb.cc  company.pb.h
task_32.5.3/src/: main.cpp
task_33.5.1/: CMakeLists.txt
task_33.5.1/include/: cart.h  product_storage.h
task_33.5.1/src/: cart.cpp  main.cpp  product_storage.cpp
task_33.5.2/: CMakeLists.txt
task_33.5.2/include/: lake.h
task_33.5.2/src/: lake.cpp  main.cpp
task_33.5.3/: CMakeLists.txt
task_33.5.3/include/: registry.h
task_33.5.3/src/: main.cpp
task_33.5.4/: CMakeLists.txt
task_34.5.1/: CMakeLists.txt  main.cpp
task_35.5.2/: CMakeLists.txt  database.json
task_35.5.2/include/: database.h  film.h
task_35.5.2/src/: database.cpp  film.cpp  main.cpp
task_35.6.1/: CMakeLists.txt
task_35.6.2/: CMakeLists.txt
task_35.6.3/: CMakeLists.txt
task_36-1-1/: CMakeLists.txt  main.cpp  resources.qrc
task_37-4-1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
task_37-4-2/: CMakeLists.txt  main.qml
task_37-4-3/: main.cpp  main.qml
task_38-5-1/: CMakeLists.txt  main.cpp  resources.qrc
task_38-5-2/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
task_38-5-3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
task_39-4-1/: CMakeLists.txt  main.qml
task_39-4-2/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
(+5 files in other folders)
